<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowCostsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BD1010">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/costs"
                android:textAlignment="gravity"
                android:textColor="#FBC02D"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/straße"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/street"
                android:textAlignment="gravity"
                android:textColor="#FBC02D"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/points1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/pointsstreet"
                android:textColor="#FBC02D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/costs1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:text="@string/costsstreet"
                android:textAlignment="viewEnd"
                android:textColor="#FBC02D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/siedlung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/settlement"
                android:textAlignment="gravity"
                android:textColor="#FBC02D"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/points2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/pointssettlement"
                android:textColor="#FBC02D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/costs2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:text="@string/costsettlement"
                android:textAlignment="viewEnd"
                android:textColor="#FBC02D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/city"
                android:textAlignment="gravity"
                android:textColor="#FBC02D"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/points3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/pointscity"
                android:textColor="#FBC02D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/costs3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:text="@string/costscity"
                android:textAlignment="viewEnd"
                android:textColor="#FBC02D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/devCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/devCard"
                android:textAlignment="gravity"
                android:textColor="#FBC02D"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/points4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/pointsdevCard"
                android:textColor="#FBC02D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/costs4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:text="@string/costsdevCard"
                android:textAlignment="viewEnd"
                android:textColor="#FBC02D"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="#FFA000"
                android:onClick="ahead"
                android:text="@string/ahead"
                android:textColor="#A10101"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>