<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#BD1010"
    android:fitsSystemWindows="true"
    tools:context=".SearchPlayersActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:text="@string/mitspieler"
        android:textAlignment="gravity"
        android:textColor="#FBC02D"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/startPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FFA000"
        android:onClick="startPlay"
        android:text="@string/startPlay"
        android:textColor="#A10101"
        android:textSize="30sp" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="165dp"
        android:backgroundTint="#FFA000"
        android:onClick="stopSearching"
        android:text="@string/searchstop"
        android:textColor="#A10101"
        android:textSize="30sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#FFA000"
        android:onClick="startSearching"
        android:text="@string/searchstart"
        android:textColor="#A10101"
        android:textSize="30sp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>