<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#BD1010"
    tools:context=".cheating.CheatSelectResourceActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titleResources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/cheatTitleCreate"
                android:textAlignment="center"
                android:textColor="#FBC02D"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/listOfResources"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonWood"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#FBC02D"
                    android:lineSpacingExtra="8sp"
                    android:onClick="chooseWood"
                    android:text="@string/wood"
                    android:textColor="#A10101"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonWool"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#FBC02D"
                    android:onClick="chooseWool"
                    android:text="@string/wool"
                    android:textColor="#A10101"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonClay"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#FBC02D"
                    android:onClick="chooseClay"
                    android:text="@string/clay"
                    android:textColor="#A10101"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonOre"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#FBC02D"
                    android:onClick="chooseOre"
                    android:text="@string/ore"
                    android:textColor="#A10101"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonWheat"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#FBC02D"
                    android:onClick="chooseWheat"
                    android:text="@string/wheat"
                    android:textColor="#A10101"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>