<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BD1010"
    tools:context=".trading.AnswerToTradeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BD1010"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/tradeAnswer"
            android:textAlignment="gravity"
            android:textColor="#FBC02D"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tradeMes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/tradeAnswer"
            android:textAlignment="gravity"
            android:textColor="#FBC02D"
            android:textSize="35sp" />

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="235dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="#FFA000"
            android:onClick="accept"
            android:text="@string/accept"
            android:textColor="#A10101"
            android:textSize="30sp" />

        <Button
            android:id="@+id/dismiss"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="35dp"
            android:backgroundTint="#FFA000"
            android:onClick="dismiss"
            android:text="@string/dismiss"
            android:textColor="#A10101"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>